--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "todo-list-server",
-	"version": "1.0.0",
-	"license": "MIT",
-	"scripts": {
-		"start": "json-server db.json --port 3000"
-	},
-	"dependencies": {
-		"json-server": "^1.0.0-alpha.23"
-	}
+  "name": "todo-list-server",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "dev": "json-server db.json --port 3000",
+    "start": "json-server db.json --port 3000"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-alpha.23"
+  }
 }
