--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
 	"description": "Quickly learn a UI library through a CRUD todo list app",
 	"repository": "https://github.com/TuanNguyen2504/todo-list",
 	"author": "TuanNguyen2504",
-	"private": false,
+	"private": true,
 	"license": "MIT",
+	"workspaces": [
+		"server",
+		"react"
+	],
 	"scripts": {
+		"server": "yarn workspace server start",
+		"start:react": "concurrently \"yarn server\" \"yarn workspace react start\"",
 		"commit": "node ./node_modules/cz-customizable/standalone.js"
 	},
 	"devDependencies": {
+		"concurrently": "^8.2.2",
 		"cz-customizable": "^7.0.0"
 	},
 	"config": {
