💥 update(react): update UI

--- a/react/package.json
+++ b/react/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@iconify-json/ph": "^1.1.11",
     "@iconify/tailwind": "^0.1.4",
+    "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
