--- a/react/tsconfig.node.json
+++ b/react/tsconfig.node.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "resolveJsonModule": true
   },
   "include": ["vite.config.ts"]
 }
