--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
