--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,17 @@
 	"name": "server",
 	"version": "1.0.0",
 	"license": "MIT",
+	"type": "module",
 	"scripts": {
-		"dev": "json-server db.json --port 3000",
-		"start": "json-server db.json --port 3000"
+		"dev": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"dependencies": {
-		"json-server": "^1.0.0-alpha.23"
+		"cors": "^2.8.5",
+		"json-server": "0.17.4",
+		"query-string": "^8.2.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.3"
 	}
 }
