--- a/react/package.json
+++ b/react/package.json
@@ -11,13 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-hook-form": "^7.50.1",
+    "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.4",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/ph": "^1.1.11",
@@ -25,6 +31,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
