--- a/react/package.json
+++ b/react/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@iconify-json/ph": "^1.1.11",
     "@iconify/tailwind": "^0.1.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -38,6 +39,7 @@
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.7.2",
     "eslint": "^8.56.0",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
