--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"await-to-js": "^3.0.0",
+		"clsx": "^2.1.0",
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
