--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"json-server": "0.17.4",
+		"morgan": "^1.10.0",
 		"query-string": "^8.2.0"
 	},
 	"devDependencies": {
