--- a/next/package.json
+++ b/next/package.json
@@ -1,31 +1,43 @@
 {
-	"name": "next",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev -p 8000",
-		"build": "next build",
-		"start": "next start -p 8000",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"await-to-js": "^3.0.0",
-		"clsx": "^2.1.0",
-		"next": "14.1.0",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-toastify": "^10.0.4",
-		"zustand": "^4.5.1"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"autoprefixer": "^10.0.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.1.0",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
-	}
+  "name": "next",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 8000",
+    "build": "next build",
+    "start": "next start -p 8000",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "await-to-js": "^3.0.0",
+    "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-toastify": "^10.0.4",
+    "swr": "^2.2.5",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3",
+    "zustand": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/ph": "^1.1.11",
+    "@iconify/tailwind": "^0.1.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.0.1",
+    "daisyui": "^4.7.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
